--- a/solita/backend/.env
+++ b/solita/backend/.env
@@ -1,2 +1,4 @@
-MONGO_URI=mongodb+srv://elennp:eder1412@cluster0.6kgnl.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-SECRETKEY=myKey1234
+MONGO_URI=mongodb+srv://elennp:eder1412@cluster0.6kgnl.mongodb.net/mytinerary?retryWrites=true&w=majority
+
+NODEMAILER=myKey1234
+SECRETKEY= mykey
